Fix spacing and price font weight

--- a/src/components/PurchasesTable.scss
+++ b/src/components/PurchasesTable.scss
@@ -19,7 +19,7 @@
   }
 
   th, td {
-    padding: 0.75rem; /* 12px */
+    padding: 0.5rem 0.75rem; /* 12px */
     font-size: 1rem; /* 16px */
     line-height: 1.5rem; /* 24px */
   }
@@ -43,7 +43,8 @@
   }
 
   tbody {
-    .purchase-name {
+    .purchase-name,
+    .purchase-price {
       font-weight: 700;
     }
 
@@ -64,4 +65,3 @@
     }
   }
 }
-
